--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "react-native-safe-area-context": "^3.3.2",
     "react-native-screens": "^3.10.2",
     "react-native-svg": "^12.1.1",
+    "react-native-system-navigation-bar": "^1.0.2",
     "react-native-toast-message": "^2.1.1",
     "react-redux": "^7.2.6",
     "yarn": "^1.22.17"
