--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "react-hook-form": "^7.26.1",
     "react-i18next": "^11.15.4",
     "react-native": "0.67.2",
+    "react-native-keyboard-avoiding-scroll-view": "^1.0.1",
     "react-native-linear-gradient": "^2.5.6",
     "react-native-otp-verify": "^1.0.4",
     "react-native-responsive-fontsize": "^0.5.1",
