--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@react-native-async-storage/async-storage": "^1.15.17",
     "@react-native-clipboard/clipboard": "^1.8.5",
     "@react-native-community/netinfo": "^7.1.10",
+    "@react-native-picker/picker": "^2.2.1",
     "@react-navigation/bottom-tabs": "^6.2.0",
     "@react-navigation/native": "^6.0.8",
     "@react-navigation/native-stack": "^6.5.0",
@@ -27,12 +28,14 @@
     "react-hook-form": "^7.26.1",
     "react-i18next": "^11.15.4",
     "react-native": "0.67.2",
+    "react-native-gesture-handler": "^2.2.0",
     "react-native-keyboard-avoiding-scroll-view": "^1.0.1",
     "react-native-linear-gradient": "^2.5.6",
     "react-native-otp-verify": "^1.0.4",
     "react-native-responsive-fontsize": "^0.5.1",
     "react-native-safe-area-context": "^3.3.2",
     "react-native-screens": "^3.10.2",
+    "react-native-shadow-2": "^6.0.3",
     "react-native-svg": "^12.1.1",
     "react-native-system-navigation-bar": "^1.0.2",
     "react-native-toast-message": "^2.1.1",
